Added test for missing values during import

--- a/Employees.Tests/Employees.Tests.csproj
+++ b/Employees.Tests/Employees.Tests.csproj
@@ -44,6 +44,9 @@
     <None Update="TestFiles\TestImportFile.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="TestFiles\TestImportFile_MissingValues.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
